Compiled against SM 1.5.0

--- a/3.2/cfg/sourcemod/dod_deathmatch.cfg
+++ b/3.2/cfg/sourcemod/dod_deathmatch.cfg
@@ -1,5 +1,5 @@
 // ConVars for plugin DoD:S DeathMatch
-// Version 3.1
+// Version 3.2
 
 
 // Whether or not smoke, rifle and frag grenades should be allowed
@@ -30,6 +30,13 @@ dm_kill_heal_amount "20"
 // Maximum: "1.000000"
 dm_kill_start_regen "1"
 
+// Whether or not disable all objectives on a map (TDM only!)
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+dm_lockobjectives "1"
+
 // Sets the DeathMatch mode:
 // 0 = Team DeathMatch
 // 1 = Free For All
@@ -52,8 +59,8 @@ dm_pistols "1"
 // Minimum: "0.000000"
 dm_regen_delay "4.0"
 
-// Health added per regeneration tick
-// Set to 0 to disable.
+// Health added per regeneration tick.
+// Set to 0 to disable
 // -
 // Default: "2"
 // Minimum: "0.000000"
@@ -85,9 +92,4 @@ dm_spawn_delay "2.0"
 // Maximum: "1.000000"
 dm_spawnsound "1"
 
-// Whether or not disable all objectives on a map (TDM only!)
-// -
-// Default: "1"
-// Minimum: "0.000000"
-// Maximum: "1.000000"
-dm_lockobjectives "1"
+
